examples/bad/share_assign.mko
fn main() {
    share let s = share_int(1)
    s = share_int(2)
}
